added this week's todos

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
@@ -1,6 +1,8 @@
 \section{Appendix}
 \subsection{Adding and removing points from polygons}
 \label{sec:polygons}
+\todo{define R map def-octahedron-holonomy}
+\todo{make clear that \( \EMzo \) is bare types}
 
 The 1-type \( C_3 \) we created earlier by pushing out the combinatorial data of a set-based simplicial triangle is clearly an example of a type of marked presented polygons \( C_n, n:\nn \). The standard HoTT circle itself is usually given as a HIT and is a non-example of a combinatorial manifold since it lacks the second vertex of the edge:
 
