progress on todos

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -47,7 +47,7 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \end{dedication}
 
 \listofchanges[title=Changelist]
-%\listoftodos
+\listoftodos
 \clearpage
 
 
