--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -128,6 +128,7 @@
 \DeclareMathOperator{\ad}{ad}
 \DeclareMathOperator{\Ad}{Ad}
 \DeclareMathOperator{\link}{\mathsf{link}}
+\DeclareMathSymbol{:}{\mathbin}{operators}{"3A}
 \newcommand{\apd}{\mathsf{apd}}
 \newcommand{\HIT}{\mathsf{HIT}}
 \newcommand{\BAuto}[1]{\BAut_1(#1)}
@@ -243,6 +244,8 @@
 \newcommand{\myspan}[5]{{#1}\xleftarrow[]{#4}{#2}\xrightarrow[]{#5}{#3}}
 \newcommand{\llb}{[\![}
 \newcommand{\rrb}{]\!]}
+\newcommand{\gr}[1]{[{#1}]} % geometric realization
+\newcommand{\hgr}[1]{\llb{#1}\rrb} % higher geometric realization
 \newenvironment{dedication}
 {\clearpage           % we want a new page
  \thispagestyle{empty}% no header and footer
