--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -65,9 +65,9 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \clearpage
 \input{discrete_gauge_theory_totals}
 \clearpage
-\appendix
-\input{discrete_gauge_theory_appendix}
-\clearpage
+% \appendix
+% \input{discrete_gauge_theory_appendix}
+% \clearpage
 
 \bibliography{connections}
 \end{document}
