--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -60,6 +60,78 @@ As we traverse an additional edge this image is simply mapped to the next vertex
 
 At stage 4 we have three paths, each consisting of \( X \) acting on a single edge of the triangle, mapped with some transport to \( T_1(x) \). We see that these three can be concatenated to form a path \( X(\ell):\tr(\ell)(X(x))=X(x) \).
 
+\begin{figure}[h]
+\centering
+\begin{tikzpicture}
+  [arrow/.style={-{Stealth[scale=1.1]}}, vec/.style={ultra thick, color=black}, vectr/.style={thick, color=black}, vectrtr/.style={thick, dashed, color=black}, vectrtrtr/.style={thick, dotted, color=black}]
+  \tikzset{oo/.style={circle, scale=0.6, fill=black}}
+  \tikzset{ii/.style={circle, scale=0.3, fill=gray}}
+\newlength{\mylen}
+  \setlength{\mylen}{3cm}
+  \newlength{\mylin}
+  \setlength{\mylin}{1.2cm}
+    \node[oo, label=below right:\( v_1 \)] (V1) at (0, 0) {};
+    \node[oo, label=below:\( v_2 \)] (V2) at (2*\mylen, 0) {};
+    \node[oo, label=above:\( v_3 \)] (V3) at (\mylen, 1.732*\mylen) {};
+
+    \draw[arrow] (V2) edge[very thick, color=teal, "\( e_{23} \)"] (V3);
+    \draw[arrow] (V1) edge[very thick, color=magenta, "\( e_{12} \)"] (V2);
+    \draw[arrow] (V3) edge[very thick, color=blue, "\( e_{31} \)"] (V1);
+    
+    \node [ii, above=\mylin of V1.north, label=above:\( v_{11} \)] (V11) {};
+    \node [ii, right=\mylin of V1.east,  label=below right:\( v_{12} \)] (V12) {};
+    \node [ii, below=\mylin of V1.south, label=below:\( v_{13} \)] (V13) {};
+    \node [ii, left= \mylin of V1.west,  label=left: \( v_{14} \)] (V14) {};
+
+    \node [ii, above=\mylin of V2.north, label=above:\( v_{21} \)] (V21) {};
+    \node [ii, right=\mylin of V2.east,  label=right:\( v_{22} \)] (V22) {};
+    \node [ii, below=\mylin of V2.south, label=below:\( v_{23} \)] (V23) {};
+    \node [ii, left= \mylin of V2.west,  label=below left: \( v_{24} \)] (V24) {};
+
+    \node [ii, above=\mylin of V3.north, label=above:\( v_{31} \)] (V31) {};
+    \node [ii, right=\mylin of V3.east,  label=right:\( v_{32} \)] (V32) {};
+    \node [ii, below=\mylin of V3.south, label=below:\( v_{33} \)] (V33) {};
+    \node [ii, left= \mylin of V3.west,  label=left: \( v_{34} \)] (V34) {};
+
+    \draw[dashed] (V11) -- (V12);
+    \draw[dashed] (V12) -- (V13);
+    \draw[dashed] (V13) -- (V14);
+    \draw[dashed] (V14) -- (V11);
+
+    \draw[dashed] (V21) -- (V22);
+    \draw[dashed] (V22) -- (V23);
+    \draw[dashed] (V23) -- (V24);
+    \draw[dashed] (V24) -- (V21);
+    
+    \draw[dashed] (V31) -- (V32);
+    \draw[dashed] (V32) -- (V33);
+    \draw[dashed] (V33) -- (V34);
+    \draw[dashed] (V34) -- (V31);
+    
+    \draw[arrow] (V1) edge[vec] (V11);
+    \draw[arrow] (V2) edge[vectr] (V21);
+    \draw[arrow] (V3) edge[vectrtr] (V34);
+    \draw[arrow] (V1) edge[vectrtrtr] (V14);
+
+    \draw[arrow] (V2) edge[vec] (V24);
+    \draw[arrow] (V3) edge[vectr] (V33);
+    \draw[arrow] (V1) edge[vectrtr] (V13);
+
+    \draw[arrow] (V21) edge[thick, color=magenta] (V24);
+    \draw[arrow] (V34) edge[thick, color=magenta] (V33);
+    \draw[arrow] (V14) edge[thick, color=magenta] (V13);
+    \draw[arrow] (V33) edge[thick, color=cyan] (V32);
+    \draw[arrow] (V13) edge[thick, color=cyan] (V12);
+    \draw[arrow] (V12) edge[thick, color=blue] (V11);
+
+    \draw[arrow] (V3) edge[vec] (V32);
+    \draw[arrow] (V1) edge[vectr] (V12);
+
+\end{tikzpicture}
+\caption{A vector field swirling around a face, in a bundle of squares. Thick black vectors are the value at the point. Thin vectors are transported once, dashed twice, and dotted three times. The vertices \( v_{ij} \) are in the tangent fibers. The colors of the arrows correspond: the red edge produced the red edge in the fibers.}
+\label{fig:swirling}
+\end{figure}
+
 \begin{mynote}
 In Hopf \cite{hopf} and in Needham \cite{needham}, the value \( X(e_{xy}) \) is called ``the change in angle between \( X \) and \( X(x)_{||} \) along the edge \( e_{xy} \),'' where by \( X(x)_{||} \) we mean the transport of the fixed single vector \( X(x) \) to the point \( X(y) \), i.e. \( \tr(e_{xy})(X(x)) \). The concatenation \( X(\ell) \) is called ``the sum of the changes in angle along each edge.'' This remark is meant to help anyone intending to make further comparisons with classical results.
 \end{mynote}
