progress on todos

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
@@ -430,7 +430,12 @@ We will create our first combinatorial surface, an octahedron. We will not prove
 \label{fig:hasse_octohedron}
 \end{figure}
 
-Applying the map \( \re \) to \( O_0\to O_1\to O \) gives the presented type \( \oo_0\to \oo_1\to \oo \).
+We can realize \( O_0\to O_1\to O \) as a cellular type denoted \( \oo_0\to \oo_1\to \oo \).
+
+\begin{mylemma}
+There is an equivalence \( \oo\simeq S^2 \).
+\end{mylemma}
+\begin{proof}Omitted.\end{proof}
 
 \begin{figure}[h]
 \centering
