sending this draft out

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -35,9 +35,9 @@ We will see in Section~\ref{sec:polygons} that \( \EM(\zz,1) \) contains all the
 \end{center}
 then we have a bundle of mere circles, with total space given by the \( \sit{} \)-type construction. We will show that this is not quite a principal bundle, i.e. a bundle of torsors. Torsors are types with the additional structure of a free and transitive group action. But if \( \link  \) satisfies an additional property (amounting to an orientation) then the pullback is a principal fibration, i.e. \( \link \) factors through a map \( \K(\zz,2)\to\EMzo \), where \( \K(\zz,2) \) is an Eilenberg-Mac Lane space. 
 
-We will argue that extending \( \link \) to a function \( T \) on paths can be thought of as constructing a connection, together with a ``flatness structure,'' i.e. a proof of flatness. Moreover, lifting \( T \) to \( X:\mm\to\EMp(\zz,1) \) can be thought of as a nonvanishing vector field. There will in general not be a total lift, just a lift on the 1-skeleton of \( \mm \). We will define the ``index'' of \( X \) at a face.
+We will argue that extending \( \link \) to a function \( T \) on paths can be thought of as constructing a connection, together with a ``flatness structure,'' i.e. a proof of flatness. Moreover, lifting \( T \) to \( X:\mm\to\EMp(\zz,1) \) can be thought of as a nonvanishing vector field. There will in general not be a total lift, just a lift on the 1-skeleton of \( \mm \). We will define the ``index'' of \( X \) at a face.\chcomment[id=Greg]{fresh edits}
 
-We will then define a method for visiting all the faces of a manifold in order to form ``totals'' of local objects. We will examine the total curvature and the total index and prove that they are equal, and argue that they are equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds. This is similar to the classical proof of Hopf\cite{hopf}, presented in detail in Needham\cite{needham}.
+We will then define a method for visiting all the faces of a manifold in order to form ``totals'' of local objects. We will examine the total curvature and the total index and prove that they are equal, and argue that they are equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds. This is similar to the classical proof of Hopf\cite{hopf}, presented in detail in Needham\cite{needham}.\chcomment[id=Greg]{fresh edits}
 
 \subsection{Future work}
 The results of this note can be extended in many directions. There are higher-dimensional generalizations of Gauss-Bonnet, including the theory of characteristic classes and Chern-Weil theory (which links characteristic classes to connections and curvature). These would involve working with nonabelian groups like \( SO(n) \) and sphere bundles. Results from gauge theory could be imported into HoTT, as well as results from surgery theory and other topological constructions that may be especially amenable to this discrete setting. Relationships with computer graphics and discrete differential geometry\cite{crane_ddg}\cite{crane_connections} could be explored. Finally, a theory that reintroduces smoothness could allow more formal versions of the analogies explored here. 
