--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -131,6 +131,7 @@ At stage 4 we have three paths, each consisting of \( X \) acting on a single ed
 \caption{A vector field swirling around a face, in a bundle of squares. Thick black vectors are the value at the point. Thin vectors are transported once, dashed twice, and dotted three times. The vertices \( v_{ij} \) are in the tangent fibers. The colors of the arrows correspond: the red edge produced the red edge in the fibers.}
 \label{fig:swirling}
 \end{figure}
+\chcomment[id=Greg]{new figure, needs a little more explanation}
 
 \begin{mynote}
 In Hopf \cite{hopf} and in Needham \cite{needham}, the value \( X(e_{xy}) \) is called ``the change in angle between \( X \) and \( X(x)_{||} \) along the edge \( e_{xy} \),'' where by \( X(x)_{||} \) we mean the transport of the fixed single vector \( X(x) \) to the point \( X(y) \), i.e. \( \tr(e_{xy})(X(x)) \). The concatenation \( X(\ell) \) is called ``the sum of the changes in angle along each edge.'' This remark is meant to help anyone intending to make further comparisons with classical results.
