--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -1,7 +1,8 @@
-\section{Comparing and combining constructions}
+\section{The total construction}
+\chcomment[id=Greg]{All new}
 We will place holonomy, flatness, and vector fields on the same footing, and combine them. We will prove the equivalance of the total curvature of a tangent bundle, and total index of a vector field. This is the key relationship in proving both the Gauss-Bonnet theorem and the Poincaré-Hopf theorem.
 
-\subsection{Comparing the types}
+\subsection{Index of the vector field}
 Given a polygon cellular type \( C_{n,0}\to C_{n,1}=C_n \), and map \( *_{C_n}:\unit\to\Kzt \) giving it the structure of an \( S^1 \)-torsor, we have the following general fact:
 \begin{myprop}
 \label{prop:eveq}
@@ -11,42 +12,99 @@ Given a pointing \( b:C_n \) the evaluation map \( \ev(b):(C_n=C_n)\to C_n \) is
 Consider the cellular type \( \mm_0\to\mm_1\to\mm \) with point \( m:\mm \). Consider a loop \( \ell:m=_\mm m \) with proof of contractibility \( f:\ell=\refl_m \). For example, we may have a face \( F \) in a combinatorial realization, with \( m \) a vertex of \( F \) and \( \ell=\partial F \) the boundary loop. We have accumulated the following constructions:
 \[\begin{aligned}
 \tr(\ell)&:Tm=Tm\\
-\flat(\ell)&:\tr(\ell)=\id\\
-X(\ell)&:\tr(\ell)(X(m))=X(m)\\
+\flat(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
+X(\ell)&:\tr(\ell)(X(m))=_{Tm=Tm}X(m)\\
 \end{aligned}\]
-which invites us to make use of the equivalence \ref{prop:eveq} to define \( X_e(\ell)\defeq \ev(X(m))^{-1}\circ X(\ell):\tr(\ell)=\id \) (where the subscript \( e \) stands for the extension to all of \( Tm \)) to obtain
-\[\begin{aligned}
+which invites us to make use of the equivalence \ref{prop:eveq} to define \( X_E(\ell)\defeq \ev(X(m))^{-1}\circ X(\ell):\tr(\ell)=\id \) (where the subscript \( E \) stands for the extension to all of \( Tm \)) to obtain
+\[
+\begin{aligned}
 \tr(\ell)&:Tm=Tm\\
-\flat(\ell)&:\tr(\ell)=\id\\
-X_e(\ell)&:\tr(\ell)=\id\\
-\end{aligned}\]
-If a loop is of the form \( \ell'=e\cdot \ell\cdot e^{-1} \) then what can we say about the values of \( \tr \), \( \flat \), and \( X_e \) on \( \ell' \) versus \( \ell \)?
+\flat(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
+X_E(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
+\end{aligned}
+\]
+These last two can be concatenated to make a loop.
+\begin{mydef}
+The \defemph{index of the vector field \( X \) around the loop \( \ell \)} is the integer \( I_X(\ell):\flat(\ell)^{-1}\cdot X_E:\id=_{Tm=Tm}\id \).
+\end{mydef}
+\begin{mynote}
+Classically the index around a loop makes use of a trivialization of the tangent bundle, and does not take place in the presence of a connection. We know from section~\ref{sec:localtriv} that the connection can serve as such a trivialization. Taking that point of view, the formula constitutes the difference between the swirling of the vector field inside the chart, and the twisting of the chart itself. 
+\end{mynote}
+We now have the following list of ingredients given the loop \( \ell \):
+\begin{equation}
+\label{eq:face_elements}
+\begin{aligned}
+\tr(\ell)&:Tm=Tm\\
+\flat(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
+X_E(\ell)&:\tr(\ell)=_{Tm=Tm}\id\\
+I_X(\ell)&:\id=_{Tm=Tm}\id\\
+\end{aligned}
+\end{equation}
+
+\subsection{Cancellations}
+The next observation is that we can relate the quantities in \ref{eq:face_elements} at different points around a cellular surface by making use of the automorphism bundle \( \sit{x:\mm}(Tx=Tx) \) and its trivialization \( \tau:\pit{x:M}(Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm) \) as in Lemma~\ref{lem:gauge_triv}.
+
+\begin{mydef}
+Consider the contractible type \( \sit{\alpha:Tm=Tm}\alpha=\id \) with the addition law \( (\alpha, p)+(\beta, q) = (\alpha\cdot\beta, p\cdot \alpha(q)) \) where \( \alpha(q):\alpha=\alpha\cdot\beta \) (using concatenation notation instead of function composition). This is a commutative group with identity \( \refl_\id \) which we call the \defemph{type of angles of \( Tm \)}.
+\end{mydef}
 
 \begin{mylemma}
-Making use of the equivalence \( \tau:\pit{x:M}(Tx=Tx)\xrightarrow[]{\simeq}(Tm=Tm) \) from Lemma~\ref{lem:gauge_triv} we have \( \tau(\tr(e\cdot\ell\cdot e^{-1}))=\tau(\tr(\ell)) \).
+\( \tau\circ X \) maps concatenation of paths to the commutative operation \( + \) in the type of angles \( \sit{\alpha:Tm=Tm}\alpha=\id \).
 \end{mylemma}
 \begin{proof}
+Suppose we have \( p:x=_\mm y \) and \( q:y=_\mm z \). Then \( X(p\cdot q)=\tr(q)(X(p))\cdot X(q) \) which is exactly the operation \( + \) but in the group \( \sit{\alpha:Tz=Tz}\alpha=\id \). We can then transport the result to \( m \) by an arbitrary path.
 \end{proof}
 
+\begin{mycor}
+\label{cor:x_cancel}
+With \( e, p, \ell \) as in Figure~\ref{fig:lasso}, we have \(\tau(X_E(e\cdot\ell\cdot e^{-1})) = \tau(X_E(\ell))\).
+\end{mycor}
+
+So under \( \tau \) we can cancel the contributions to \( X \) from the edge \( e \) after traversing it once in each direction. Meanwhile we have something similar for the transport automorphisms:
+
 \begin{mylemma}
-\(X_e(e\cdot\ell\cdot e^{-1}) = X_e(\ell)\).
+With \( e, p, \ell \) as in Figure~\ref{fig:lasso}, we have \( \tau(\tr(e\cdot\ell\cdot e^{-1}))=\tau(\tr(\ell)) \).
 \end{mylemma}
 \begin{proof}
+Recall that \( \tau \) conjugates automorphisms by transport along some arbitrary path to \( m \). To transport automorphisms from \( x \) to \( p \), choose a path \( p:m=_\mm x \). Then make the specific choice \( p\cdot e:m=_\mm y \) to transport automorphisms from \( y \) to \( p \). Then \( \tau(\tr(e\cdot\ell\cdot e^{-1})) \) and \( \tau(\tr(\ell)) \) both compute to \( \tr((p\cdot e)\cdot\ell\cdot(p\cdot e)^{-1}) \). 
 \end{proof}
+
+\begin{figure}[h]
+\centering
+\begin{tikzpicture}[arrow/.style={-{Stealth[scale=1.1]}}]
+  \tikzstyle{internal}=[inner sep=0, outer sep=0, line cap=rect]
+    \coordinate (V2) at (1, 1.732) {};
+    \node[label=below:\( y \)] (y) at (0, 0) {};
+    \coordinate (V3) at (2, 0) {};
+
+    \draw (V2) edge["\( \ell \)"] (V3);
+    \draw (y) -- (V2);
+    \draw[arrow] (V3) -- (y);
+    
+    \node[label=below:\( m \)] (m) at (-3, 0) {};
+    \node[label=below:\( x \)] (x) at (-1.5, 0) {};
+
+    \draw[arrow] (m) edge["\( p\)"] (x);
+    \draw[arrow] (x) edge["\( e\)"] (y);
+    
+    \fill [black] (y) circle (2pt);
+    \fill [black] (m) circle (2pt);
+    \fill [black] (x) circle (2pt);
+\end{tikzpicture}
+\caption{Comparing maps on the edge \( e \) at the master point \( m \) with and without traversing \( \ell \).}
+\label{fig:lasso}
+\end{figure}
 
 \subsection{Total enumeration of faces}
 \begin{mydef}
 A \defemph{total enumeration of faces} for a combinatorial 2-manifold \( \mm \) with underlying simplicial complex \( M=[M_0, M_1, M_2] \) consists of
 \begin{enumerate}
 \item A ``master basepoint'' \( m:M_0 \).
-\item For each face \( F:M_2 \) with vertices \( \{v_1, v_2, v_3\} \) an enumeration of its vertices \( [v_1, v_2, v_3] \), including the choice of the first vertex in the enumeration as the basepoint of \( F \), which is \defemph{globally compatible} with the choices for the other faces, meaning that when two faces \( F_1,F_2 \) share an edge \( \{v, w\} \), then one of the faces includes the sublist \( [v, w] \) and the other includes \( [w, v] \).
+\item For each face \( F:M_2 \) with vertices \( \{v_{F,1}, v_{F,2}, v_{F,3}\} \) an enumeration of its vertices \( [v_{F,1}, v_{F,2}, v_{F,3}] \), including the choice of the first vertex in the enumeration as the basepoint of \( F \), which is \defemph{globally compatible} with the choices for the other faces, meaning that when two faces \( F_1,F_2 \) share an edge \( \{v, w\} \), then one of the faces includes the sublist \( [v, w] \) and the other includes \( [w, v] \).
 \item An ordering of the faces \( [F_1,\ldots,F_n] \).
-\item For each face \( F \) a path \( p_F:m=_\mm F_v \) and a loop \( \ell_F\defeq p_F\cdot e_{12}\cdot e_{23}\cdot e_{31}\cdot p_F^{-1} \) where \( e_{ij}:v_i=v_j \) are the paths corresponding to the edges. 
 \end{enumerate}
 Two enumerations that differ only in the ordering of vertices (2.) are said to have the \defemph{same orientation} if it is true for every face that the two orderings of vertices differ by an even orientation.
 \end{mydef}
-
-Note that the last bullet of the definition is the only one that uses the realization \( \mm \).
 
 \begin{mynote}
 For such an enumeration to exist the underlying simplicial complex must be \emph{orientable} in a classical sense. We are not going to explore this requirement internally in HoTT, nor prove any relationship between orientability of the set-based complex and orientation in the sense of factoring classifying maps through \( \Kzt\to\EMzo \).
@@ -57,122 +115,34 @@ The octahedron: for \( \oo \) we might choose \( b \) as the master basepoint, a
 \end{myex}
 
 \begin{mydef}
-Given a total enumeration of faces, the concatenation \( \elltot\defeq\ell_{F_1}\cdot\cdots\cdot\ell_{F_n} \) is called \defemph{the total loop} of the enumeration.
+The \defemph{total path} of an enumeration is the list \( \ell_{F_1},\ldots,\ell_{F_n} \) of loops where \( \ell_{F_i}:v_{F_i,1}=v_{F_i,1} \) is the loop around \( F_i \) connecting vertices \( v_{F,1}, v_{F,2}, v_{F,3} \).
 \end{mydef}
-
-\begin{figure}[h]
-\centering
-\begin{tikzpicture}[arrow/.style={-{Stealth[scale=1.1]}}]
-  \tikzset{internal/.style={inner sep=1, outer sep=1, line cap=rect}}
-    \node[internal, label=above:\( v_2 \)] (V2) at (1, 1.732) {};
-    \node[internal, label=below:\( v_1 \)] (V1) at (0, 0) {};
-    \node[internal, label=below:\( v_3 \)] (V3) at (2, 0) {};
-    \node (Face) at (1, 0.85) {\( F \)};
-
-    \draw[arrow] (V2) edge["\( e_{23} \)"] (V3);
-    \draw[arrow] (V1) edge["\( e_{12} \)"] (V2);
-    \draw[arrow] (V3) edge["\( e_{31} \)"] (V1);
-    
-    \node[internal, label=left:\( m \)] (m) at (-3, 0) {};
-
-    \draw[arrow] (m) edge["\( p\to \)"] (V1);
-    \draw[arrow] (V1) edge["\( \leftarrow p^{-1} \)"] (m);
-    
-    \fill [black] (V1) circle (2pt);
-    \fill [black] (V2) circle (2pt);
-    \fill [black] (V3) circle (2pt);
-    \fill [black] (m) circle (2pt);
-\end{tikzpicture}
-\caption{A loop \( \ell_F:m=_\mm m \) around the face \( F \).}
-\label{fig:lasso}
-\end{figure}
-
-\subsection{Total holonomy}
-Given a total enumeration of faces we can form the compositions \( T\circ\ell_{F_i} \) with the associated loop to obtain holonomy isomorphisms \( T\circ\ell_{F_i}:Tm=Tm \). We can concatenate all the loops \( \ell_{F_1}\cdot\cdots\cdot\ell_{F_n} \) and obtain a \emph{total holonomy} \( T\circ(\ell_{F_1}\cdot\cdots\cdot\ell_{F_n}):Tm=Tm  \).
 
 \begin{mydef}
-The \defemph{total holonomy} of a total enumeration of faces is the map \( T\circ(\ell_{F_1}\cdot\cdots\cdot\ell_{F_n}):Tm=Tm  \).
+Using \ref{eq:face_elements} we can define the \defemph{total curvature}, \defemph{total swirling} and \defemph{total index} of a total path as follows:
+\begin{equation}
+\label{eq:total_elements}
+\begin{aligned}
+\flat_\mathrm{tot}&=\tau(\flat(\ell_{F_1}))+\cdots+\tau(\flat(\ell_{F_n}))\\
+X_\mathrm{tot}&=\tau(X(\ell_{F_1}))+\cdots+\tau(X(\ell_{F_n}))\\
+I_\mathrm{tot}&=\flat_\mathrm{tot}^{-1}\cdot X_\mathrm{tot}
+\end{aligned}
+\end{equation}
+where the sums are taken in the group of angles \( \sit{\alpha:Tm=Tm}\alpha=\id \).
 \end{mydef}
 
-\begin{myprop}
-The holonomy \( \ell_F \) around a face \( F \) is conjugated if we change the path \( p_F \) or the basepoint \( m \). The holonomy becomes the inverse automorphism if we change the enumeration of \( F \) by an odd permutation of its vertices (but keep the basepoint fixed).
-\end{myprop}
+\begin{mylemma}
+\label{lem:edges_cancel}
+The total path of an enumeration visits each edge an even number of times, equally in each direction.
+\end{mylemma}
+
+\begin{mythm}
+\( \tau(X(\ell_{F_1}))\cdots\tau(X(\ell_{F_n}))=\refl \) in \( \sit{\alpha:Tm=Tm}\alpha=\id \). 
+\end{mythm}
 \begin{proof}
-If we change the path \( p_F \) to a homotopic path \( p'_F \), then the change is made up of a finite sequence of moves like the one in Figure~\ref{fig:tail_move}, where the triangle \( xyz \) bounds a face. Then \( p_{F} \) is given by 
-\[ (p\cdot e_{xy})\cdot (q\cdot e_{12}\cdot e_{23}\cdot e_{31}\cdot q^{-1})\cdot (p\cdot e_{xy})^{-1}\] 
-where we grouped the parts that involve the change and do not involve it. So replacing \( e_{xy} \) by \( e_{xz}\cdot e_{zy} \) is definitionally equal to 
-\[ A\cdot (p\cdot e_{xy})\cdot (q\cdot e_{12}\cdot e_{23}\cdot e_{31}\cdot q^{-1})\cdot (p\cdot e_{xy})^{-1}\cdot A^{-1}\] 
-where \( A\defeq p\cdot e_{xz}\cdot e_{zy}\cdot e_{xy}^{-1}\cdot p^{-1} \) is the loop that circulates the difference between the paths. Said another way, we are making use of the observation that \( p_F \) is related to \( p'_F \) by conjugating with the loop, based at \( m \), that goes around the discrepancy. If we add more such basic changes then we add additional conjugations.
-
-If we change the basepoint \( m \) to \( m' \) then we need to make a new choice, which is a path \( \pi:m'=m \). This lengthens the path \( p_F \) to the path \( \pi\cdot p_F\cdot \pi^{-1} \). This conjugation relates two different groups, the automorphism groups \( Tm=Tm \) and \( Tm'=Tm' \). The two groups are not canonically identified because the identification relies on the choice of \( \pi \). If we change \( \pi \) by a sequence of moves like we did with \( p_F \) then again the holonomy at \( m' \) will change by a conjugation.
-
-Finally we observe that for the triangle \( F \), an odd permutation that keeps the basepoint fixed is simply a traversal of the loop in the opposite direction, sending \( \ell_F \) to \( \ell_{F^{-1}} \).
+Immediate from Lemma~\ref{lem:edges_cancel} and Corollary~\ref{cor:x_cancel}.
 \end{proof}
-
-\begin{figure}[h]
-\centering
-\begin{tikzpicture}[arrow/.style={-{Stealth[scale=1.1]}}]
-  \tikzset{internal/.style={inner sep=1, outer sep=1, line cap=rect}}
-    \node[internal, label=above:\( v_2 \)] (V2) at (1, 1.732) {};
-    \node[internal, label=below:\( v_1 \)] (V1) at (0, 0) {};
-    \node[internal, label=below:\( v_3 \)] (V3) at (2, 0) {};
-    \node (Face) at (1, 0.85) {\( F \)};
-
-    \draw[arrow] (V2) edge["\( e_{23} \)"] (V3);
-    \draw[arrow] (V1) edge["\( e_{12} \)"] (V2);
-    \draw[arrow] (V3) edge[swap, "\( e_{31} \)"] (V1);
-    
-    \node[internal, label=left:\( m \)] (m) at (-4, 0) {};
-    \node[internal, label=below:\( x \)] (x) at (-3, 0) {};
-    \node[internal, label=below:\( y \)] (y) at (-1, 0) {};
-    \node[internal, label=above:\( z \)] (z) at (-2, 1.732) {};
-
-    \draw[arrow] (m) edge["\( p \)"] (x);
-    \draw[arrow] (x) edge["\( e_{xy} \)"] (y);
-    \draw[arrow, dashed] (x) edge["\( e_{xz} \)"] (z);
-    \draw[arrow, dashed] (z) edge["\( e_{zy} \)"] (y);
-    \draw[arrow] (y) edge["\( q \)"] (V1);
-
-    \fill [black] (V1) circle (2pt);
-    \fill [black] (V2) circle (2pt);
-    \fill [black] (V3) circle (2pt);
-    \fill [black] (m) circle (2pt);
-    \fill [black] (x) circle (2pt);
-    \fill [black] (y) circle (2pt);
-    \fill [black] (z) circle (2pt);
-\end{tikzpicture}
-\caption{Two paths to the face, from \( x \) to \( y \) directly, or through \( z \).}
-\label{fig:tail_move}
-\end{figure}
 
 \begin{mycor}
-In a bundle of mere circles \( T:\mm\to\EMzo \) the total holonomy is independent of the choice of paths \( p_{F_i} \) and the basepoint \( m \). It is inverted if we switch orientations.
+The total index is equal to the opposite of the total curvature. The total curvature is an integer.
 \end{mycor}
-\begin{proof}
-This follows from the commutativity of \( \so \) and hence of the holonomy isomorphism groups \( Tm=Tm \). See \cite{buchholtz2023central}, Example 3.8.
-\end{proof}
-
-\begin{myex}
-The total holonomy of \( T_1 \) on \( \oo \) (Definition~\ref{def:octahedron_holonomy}) is \( \id \), and the flatness structure is the path \( \id=R^8 \) which is two full rotations of \( C_4 \).
-\end{myex}
-
-\subsection{Total index of a vector field}
-
-%We defined the index on a face in Definition~\ref{def:index}. We will extend this to a total index defined with a total enumeration of faces.
-
-\subsection{The main theorem}
-\begin{mythm}
-The total index is constant on \( \pit{x:\mm_1}T_1(x) \).
-\end{mythm}
-
-This appears to be a little less than what we have classically, which is:
-\begin{enumerate}
-\item A definition of total curvature of a connection on the tangent bundle.
-\item A definition of total index, without using the connection.
-\item A definition of Euler characteristic.
-\item A proof that total index is independent of the vector field.
-\item A proof that total curvature is equal to total index.
-\end{enumerate}
-This collection of results provides enough redundancy to separately produce corollaries such as: total curvature is an integer; total curvature does not depend on the connection; a second proof that total index is independent of the vector field (since it is equal to total curvature, which does not so depend).
-
-How much of this do we have?
